syntax = "proto3";

package note;

import "definitions/validate/Validate.proto";

option go_package = "github.com/yb2020/odoc-proto/gen/go/note";

// 笔记导出历史模型
message NoteExportHistory {
  string id = 1;
  string note_id = 2 [(validate.rules).string = {min_len: 1}];
  string export_type = 3;
  string export_url = 4;
  int64 version = 5;
}

// @api_path: /api/note/export-history
// @method: POST
// @content-type: application/json
// @summary: 创建笔记导出历史
message CreateNoteExportHistoryRequest {
  string note_id = 1 [(validate.rules).string = {min_len: 1}];
  uint64 version = 2 [(validate.rules).uint64 = {gt: 0}];
}

message CreateNoteExportHistoryResponse {
  string id = 1;
}

// @api_path: /api/note/export-history
// @method: GET
// @content-type: application/json
// @summary: 获取笔记导出历史
message GetNoteExportHistoryRequest {
  string id = 1 [(validate.rules).string = {min_len: 1}];
}

message GetNoteExportHistoryResponse {
  NoteExportHistory note_export_history = 1;
}

// @api_path: /api/note/export-history
// @method: PUT
// @content-type: application/json
// @summary: 更新笔记导出历史
message UpdateNoteExportHistoryRequest {
  string id = 1 [(validate.rules).string = {min_len: 1}];
  string export_type = 2;
  string export_url = 3;
}

message UpdateNoteExportHistoryResponse {
  bool success = 1;
}

// @api_path: /api/note/export-history
// @method: DELETE
// @content-type: application/json
// @summary: 删除笔记导出历史
message DeleteNoteExportHistoryRequest {
  string id = 1 [(validate.rules).string = {min_len: 1}];
}

message DeleteNoteExportHistoryResponse {
  bool success = 1;
}

// @api_path: /api/note/export-history/by-note
// @method: GET
// @content-type: application/json
// @summary: 根据笔记ID获取笔记导出历史列表
message GetNoteExportHistoriesByNoteIdRequest {
  string note_id = 1 [(validate.rules).string = {min_len: 1}];
}

message GetNoteExportHistoriesByNoteIdResponse {
  repeated NoteExportHistory note_export_histories = 1;
}

// @api_path: /api/note/export-history/latest-by-note
// @method: GET
// @content-type: application/json
// @summary: 获取笔记最新导出历史
message GetLatestNoteExportHistoryByNoteIdRequest {
  string note_id = 1 [(validate.rules).string = {min_len: 1}];
}

message GetLatestNoteExportHistoryByNoteIdResponse {
  NoteExportHistory note_export_history = 1;
}
